Fix mobile top bar content overlap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,7 @@
     --border-color: #2d3236;
     --hover-bg: #2a2f34;
     --shadow-color: rgba(0, 0, 0, 0.2);
+    --mobile-bar-offset: 0px;
 }
 
 body, html {
@@ -687,7 +688,8 @@ input[type="number"]:focus, input[type="text"]:focus, select:focus {
     .container-fluid {
         display: flex;
         flex-direction: column;
-        height: calc(100vh - 52px);
+        height: calc(100vh - var(--mobile-bar-offset));
+        padding-top: 0;
     }
 
     #map {
@@ -701,6 +703,15 @@ input[type="number"]:focus, input[type="text"]:focus, select:focus {
         width: 100%;
         height: 100%;
         border: none;
+        scroll-padding-top: calc(var(--mobile-bar-offset) + 8px);
+    }
+
+    #toolSelection,
+    #toolDetails,
+    #aiSettingsPanel,
+    #attributePanel,
+    #drawingData {
+        scroll-margin-top: calc(var(--mobile-bar-offset) + 8px);
     }
 
     /* View switching */
